[tool.poetry]
name = "gluetool"
version = "2.1"
description = "Python framework for constructing command-line pipelines."
authors = [
  "Milos Prchlik <mprchlik@redhat.com>",
  "Miroslav Vadkerti <mvadkert@redhat.com>",
  "Martin Kluson <mkluson@redhat.com>",
  "Ondrej Ptak <optak@redhat.com>",
  "Evgeny Fedin <efedin@redhat.com>",
  "Guy Inger <ginger@redhat.com>",
  "Simon Walter <siwalter@redhat.com>",
  "Jan Havlin <jhavlin@redhat.com>"
]
license = "BSD"
readme = "README.rst"
homepage = "https://gluetool.readthedocs.org/"
repository = "https://github.com/gluetool/gluetool"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Utilities'
]
packages = [
  { include = "gluetool" }
]
include = [
  "assets/html-log/prism.css",
  "assets/html-log/prism.js",
  "assets/html-log/semantic.min.css",
  "assets/html-log/semantic.min.js",
  "gluetool_modules/__init__.py",
  "gluetool_modules/bash_completion.py",
  "gluetool_modules/dep_list.py",
  "gluetool_modules/yaml_pipeline.py"
]

[tool.poetry.dependencies]
python = "~3.7.2 || ~3.8 || ~3.9"
beautifulsoup4 = "^4.6.3"
colorama = "^0.4.6"
configparser = "^4.0.2"
docutils = "^0.14"
Jinja2 = "^2.10"
lxml = "^4.2.4"
mock = "^3.0.5"
raven = "^6.9.0"
requests = "2.26.0"
requests-toolbelt = "^0.8.0"
"ruamel.yaml" = "^0.16.12"
six = "^1.12.0"
# Our text coloring depends on Sphinx having some attributes, newer versions changed their internals :/
Sphinx = "~1.5.2"
tabulate = "^0.8.2"
urlnormalizer = "^1.2.0"
# While *mypy* is a tool to check type annotations, *mypy-extensions* is a package that brings extensions
# to the standard typing module - therefore it is not a developer dependency, as it is needed by types
# depending on extended argument annotations.
mypy-extensions = "^0.4.3"
zipp = "^3.5.0"
packaging = "^20.9"
MarkupSafe = "1.1.1"

[tool.poetry.dev-dependencies]
# attrs 21.4 is the last one supporting Python 2.
attrs = "^21.4"
flake8 = "3.7.8"
lazy-object_proxy = "1.7.1"
hypothesis = "^4.57.1"
# 2.1.3 is the last one supporting Python 2.
importlib-metadata = "^2.1.3"
mypy = "0.991"
mypy-extensions = "0.4.3"
pylint = "2.15.6"
pytest-flake8 = "1.0.4"
pytest-cov = "^2.5.1"
pytest-mock = "^1.6.3"
pytest = "^5.4.3"
sphinx-rtd-theme = "^0.4.1"
typing-extensions = "^4.4.0"
types-six = "*"
types-mock = "*"
types-requests = "*"

# Using asterisk instead of specifying pytest-lint versions for each suported Python version seems to do the trick:
# we limit the list of possible Pylint versions, and we limit the list of possible Pytest versions, and asterisk
# apparently gives Poetry the enough space to find pytest-pylint to match both ends.
pytest-pylint = "*"

[tool.poetry.scripts]
gluetool = "gluetool.tool:main"
gluetool-html-log = "gluetool.html_log:main"

[tool.poetry.plugins]

[tool.poetry.plugins."gluetool.modules"]
".bash_completion" = "gluetool_modules.bash_completion:BashCompletion"
".dep_list" = "gluetool_modules.dep_list:DepList"
".yaml_pipeline" = "gluetool_modules.yaml_pipeline:YAMLPipeline"

[build-system]
requires = ["poetry>=1.1.3"]
build-backend = "poetry.masonry.api"
