[tool.poetry]
name = "gluetool"
version = "2.13"
description = "Python framework for constructing command-line pipelines."
authors = [
  "Milos Prchlik <mprchlik@redhat.com>",
  "Miroslav Vadkerti <mvadkert@redhat.com>",
  "Martin Kluson <mkluson@redhat.com>",
  "Ondrej Ptak <optak@redhat.com>",
  "Evgeny Fedin <efedin@redhat.com>",
  "Guy Inger <ginger@redhat.com>",
  "Simon Walter <siwalter@redhat.com>",
  "Jan Havlin <jhavlin@redhat.com>"
]
license = "BSD"
readme = "README.rst"
homepage = "https://gluetool.readthedocs.org/"
repository = "https://gitlab.com/testing-farm/gluetool"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Utilities'
]
packages = [
  { include = "gluetool" }
]
include = [
  "assets/html-log/prism.css",
  "assets/html-log/prism.js",
  "assets/html-log/semantic.min.css",
  "assets/html-log/semantic.min.js",
  "gluetool_modules/__init__.py",
  "gluetool_modules/bash_completion.py",
  "gluetool_modules/dep_list.py",
  "gluetool_modules/yaml_pipeline.py"
]

[tool.poetry.dependencies]
python = "~3.8 || ~3.9"
beautifulsoup4 = "*"
colorama = "*"
configparser = "*"
docutils = "*"
Jinja2 = "^3.0.0"
lxml = "*"
mock = "*"
requests = "*"
requests-toolbelt = "*"
"ruamel.yaml" = "^0.16.12"
six = "*"
# Our text coloring depends on Sphinx having some attributes, newer versions changed their internals :/
Sphinx = "^5.0.0"
tabulate = "*"
urlnormalizer = "*"
# While *mypy* is a tool to check type annotations, *mypy-extensions* is a package that brings extensions
# to the standard typing module - therefore it is not a developer dependency, as it is needed by types
# depending on extended argument annotations.
mypy-extensions = "*"
zipp = "*"
packaging = "*"
MarkupSafe = "^2.0.0"
attrs = "^23.1.0"
cattrs = "^23.2.0"
psutil = "^5.9.5"
sentry-sdk = "^1.30.0"

[tool.poetry.dev-dependencies]
# flake8 5 introduced a bug https://github.com/tholo/pytest-flake8/issues/87
flake8 = "<5.0.0"
lazy-object_proxy = "*"
hypothesis = "*"
importlib-metadata = "*"
mypy = "*"
pylint = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest = "*"
sphinx-rtd-theme = "*"
types-six = "*"
types-mock = "*"
types-requests = "*"

# Using asterisk instead of specifying pytest-lint versions for each suported Python version seems to do the trick:
# we limit the list of possible Pylint versions, and we limit the list of possible Pytest versions, and asterisk
# apparently gives Poetry the enough space to find pytest-pylint to match both ends.
pytest-pylint = "*"
types-psutil = "^5.9.5"

[tool.poetry.scripts]
gluetool = "gluetool.tool:main"
gluetool-html-log = "gluetool.html_log:main"

[tool.poetry.plugins]

[tool.poetry.plugins."gluetool.modules"]
".bash_completion" = "gluetool_modules.bash_completion:BashCompletion"
".dep_list" = "gluetool_modules.dep_list:DepList"
".yaml_pipeline" = "gluetool_modules.yaml_pipeline:YAMLPipeline"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
