[project]
name = "gluetool"
dynamic = ["version"]

[tool.poetry]
name = "gluetool"
version = "0.0.0"
description = "Python framework for constructing command-line pipelines."
authors = [
  "Milos Prchlik <mprchlik@redhat.com>",
  "Miroslav Vadkerti <mvadkert@redhat.com>",
  "Martin Kluson <mkluson@redhat.com>",
  "Ondrej Ptak <optak@redhat.com>",
  "Evgeny Fedin <efedin@redhat.com>",
  "Guy Inger <ginger@redhat.com>",
  "Simon Walter <siwalter@redhat.com>",
  "Jan Havlin <jhavlin@redhat.com>"
]
license = "BSD"
readme = "README.rst"
homepage = "https://gluetool.readthedocs.org/"
repository = "https://gitlab.com/testing-farm/gluetool"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Utilities'
]
packages = [
  { include = "gluetool" }
]
include = [
  "assets/html-log/prism.css",
  "assets/html-log/prism.js",
  "assets/html-log/semantic.min.css",
  "assets/html-log/semantic.min.js",
  "gluetool_modules/__init__.py",
  "gluetool_modules/bash_completion.py",
  "gluetool_modules/dep_list.py",
  "gluetool_modules/yaml_pipeline.py"
]

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "*"
colorama = "*"
docutils = "*"
Jinja2 = "*"
lxml = "*"
mock = "*"
requests = "*"
requests-toolbelt = "*"
"ruamel.yaml" = "*"
six = "*"
# Our text coloring depends on Sphinx having some attributes, newer versions changed their internals :/
Sphinx = "^5.0.0"
tabulate = "*"
urlnormalizer = "*"
# While *mypy* is a tool to check type annotations, *mypy-extensions* is a package that brings extensions
# to the standard typing module - therefore it is not a developer dependency, as it is needed by types
# depending on extended argument annotations.
mypy-extensions = "*"
zipp = "*"
packaging = "*"
MarkupSafe = "*"
attrs = "*"
cattrs = "*"
psutil = "*"
sentry-sdk = "*"

[tool.poetry.dev-dependencies]
lazy-object_proxy = "*"
hypothesis = "*"
importlib-metadata = "*"
mypy = "*"
pylint = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest = "*"
sphinx-rtd-theme = "*"
types-six = "*"
types-mock = "*"
types-requests = "*"

# Using asterisk instead of specifying pytest-lint versions for each suported Python version seems to do the trick:
# we limit the list of possible Pylint versions, and we limit the list of possible Pytest versions, and asterisk
# apparently gives Poetry the enough space to find pytest-pylint to match both ends.
pytest-pylint = "*"
types-psutil = "*"

[tool.poetry.scripts]
gluetool = "gluetool.tool:main"
gluetool-html-log = "gluetool.html_log:main"

[tool.poetry.plugins]

[tool.poetry.plugins."gluetool.modules"]
".bash_completion" = "gluetool_modules.bash_completion:BashCompletion"
".dep_list" = "gluetool_modules.dep_list:DepList"
".yaml_pipeline" = "gluetool_modules.yaml_pipeline:YAMLPipeline"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
# Exclude test files (replicating old pytest -k 'not test_' behavior)
exclude = ["gluetool/tests"]

[tool.ruff.lint]
# Only enable flake8-equivalent rules
select = ["E", "W", "F"]
# Ignore line too long (E501)
ignore = ["E501"]
